--- a/CityGuide/CityGuide/Classes/BaseTableViewController/BaseTableViewController.xib
+++ b/CityGuide/CityGuide/Classes/BaseTableViewController/BaseTableViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseTableViewController">
             <connections>
                 <outlet property="tableView" destination="V29-yS-glK" id="Qhw-7I-Ik1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
