--- a/CityGuide/CityGuide/Classes/Views/SendView/SendView.xib
+++ b/CityGuide/CityGuide/Classes/Views/SendView/SendView.xib
@@ -16,7 +16,6 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hx1-NC-ggL">
                     <rect key="frame" x="8" y="8" width="584" height="42"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <state key="normal" title="Button">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,6 +35,9 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="sendButton" destination="Hx1-NC-ggL" id="UX9-ew-XRe"/>
+            </connections>
             <point key="canvasLocation" x="497" y="489"/>
         </view>
     </objects>
