--- a/CityGuide/CityGuide/Classes/Views/TextCell/TextCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/TextCell/TextCell.xib
@@ -7,27 +7,35 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="KGk-i7-Jjw" customClass="TextCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="KGk-i7-Jjw" customClass="TextCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1M-pr-svh">
-                        <rect key="frame" x="8" y="8" width="304" height="27"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0M-6W-Xij">
+                        <rect key="frame" x="8" y="8" width="304" height="35"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1M-pr-svh">
+                        <rect key="frame" x="17" y="8" width="295" height="35"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
+                        <size key="shadowOffset" width="100" height="-1"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="d1M-pr-svh" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="17x-C8-9IM"/>
-                    <constraint firstItem="d1M-pr-svh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="3oy-lX-5Ka"/>
-                    <constraint firstItem="d1M-pr-svh" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="NAt-v4-z2s"/>
+                    <constraint firstItem="d1M-pr-svh" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="8" id="17x-C8-9IM"/>
+                    <constraint firstItem="d1M-pr-svh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="9" id="3oy-lX-5Ka"/>
+                    <constraint firstItem="d1M-pr-svh" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="4.5" id="NAt-v4-z2s"/>
+                    <constraint firstItem="Q0M-6W-Xij" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Q2P-39-hK0"/>
+                    <constraint firstAttribute="trailing" secondItem="Q0M-6W-Xij" secondAttribute="trailing" constant="8" id="SwS-ZG-WHZ"/>
+                    <constraint firstAttribute="bottom" secondItem="Q0M-6W-Xij" secondAttribute="bottom" id="dC5-lr-4vu"/>
                     <constraint firstItem="d1M-pr-svh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="yqh-hC-31O"/>
+                    <constraint firstItem="Q0M-6W-Xij" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="zJU-iD-kFe"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
