--- a/CityGuide/CityGuide/Classes/CompanyViewController/CompanyViewController.xib
+++ b/CityGuide/CityGuide/Classes/CompanyViewController/CompanyViewController.xib
@@ -26,7 +26,7 @@
                         <constraint firstAttribute="height" constant="49" id="jsT-lE-JPe"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                     <variation key="default">
                         <mask key="constraints">
