--- a/CityGuide/CityGuide/Classes/MapViewController/MapViewController.xib
+++ b/CityGuide/CityGuide/Classes/MapViewController/MapViewController.xib
@@ -20,8 +20,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="R6A-GK-HCM">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="600" id="2A5-Hi-ZBD"/>
-                        <constraint firstAttribute="height" constant="30" id="KY0-1D-Mbs"/>
+                        <constraint firstAttribute="height" constant="30" id="Bah-Bb-veI"/>
                     </constraints>
                     <state key="normal" title="Выберите категорию ">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,8 +32,7 @@
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="91r-Pr-q3v">
                     <rect key="frame" x="0.0" y="38" width="600" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="aCI-fN-EwN"/>
-                        <constraint firstAttribute="width" constant="600" id="cRo-Cn-toa"/>
+                        <constraint firstAttribute="height" constant="30" id="FSZ-Qc-GXg"/>
                     </constraints>
                     <state key="normal" title="Выберите подкатегорию">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -50,16 +48,16 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="esb-gj-jG5" secondAttribute="trailing" id="5Sc-fC-Obe"/>
-                <constraint firstItem="esb-gj-jG5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Chy-bc-WP4"/>
-                <constraint firstItem="esb-gj-jG5" firstAttribute="top" secondItem="91r-Pr-q3v" secondAttribute="bottom" constant="13" id="QlI-Po-ECV"/>
-                <constraint firstAttribute="trailing" secondItem="91r-Pr-q3v" secondAttribute="trailing" id="YiY-9q-Res"/>
-                <constraint firstItem="R6A-GK-HCM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bHL-fJ-wkV"/>
-                <constraint firstItem="91r-Pr-q3v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="cOH-pC-lLa"/>
-                <constraint firstItem="R6A-GK-HCM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="giY-iL-oYN"/>
-                <constraint firstAttribute="trailing" secondItem="R6A-GK-HCM" secondAttribute="trailing" id="mg2-Sj-Hmx"/>
-                <constraint firstAttribute="bottom" secondItem="esb-gj-jG5" secondAttribute="bottom" id="mvU-ZC-u5E"/>
-                <constraint firstItem="91r-Pr-q3v" firstAttribute="top" secondItem="R6A-GK-HCM" secondAttribute="bottom" constant="8" id="tPX-4a-kbT"/>
+                <constraint firstItem="91r-Pr-q3v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3Zf-Uo-R4W"/>
+                <constraint firstItem="esb-gj-jG5" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AVz-un-YTl"/>
+                <constraint firstAttribute="trailing" secondItem="R6A-GK-HCM" secondAttribute="trailing" id="Btl-yc-O7A"/>
+                <constraint firstItem="R6A-GK-HCM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="WIB-74-zww"/>
+                <constraint firstItem="91r-Pr-q3v" firstAttribute="top" secondItem="R6A-GK-HCM" secondAttribute="bottom" constant="8" id="aDA-gU-hi6"/>
+                <constraint firstItem="esb-gj-jG5" firstAttribute="top" secondItem="91r-Pr-q3v" secondAttribute="bottom" constant="13" id="cpO-dZ-W8a"/>
+                <constraint firstAttribute="trailing" secondItem="91r-Pr-q3v" secondAttribute="trailing" id="h9A-hy-WBh"/>
+                <constraint firstAttribute="trailing" secondItem="esb-gj-jG5" secondAttribute="trailing" id="hnI-Ym-fUD"/>
+                <constraint firstItem="R6A-GK-HCM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="oWj-PO-iXu"/>
+                <constraint firstAttribute="bottom" secondItem="esb-gj-jG5" secondAttribute="bottom" id="quU-Vt-K57"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
         </view>
