--- a/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -17,15 +16,15 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NIM-Le-WF3">
                         <rect key="frame" x="8" y="10" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="WOb-pb-ncB"/>
-                            <constraint firstAttribute="height" constant="50" id="lq8-hJ-0Tc"/>
+                            <constraint firstAttribute="width" constant="50" id="LGF-Mp-tu9"/>
+                            <constraint firstAttribute="height" constant="50" id="cfV-TT-Ha5"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jsj-ma-TXI">
                         <rect key="frame" x="391" y="23" width="27" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="5lw-vc-k1y"/>
-                            <constraint firstAttribute="width" constant="27" id="Fc9-M9-9yc"/>
+                            <constraint firstAttribute="height" constant="21" id="R2O-Rm-Xhe"/>
+                            <constraint firstAttribute="width" constant="27" id="RNy-Ys-gt5"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -37,8 +36,8 @@
                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="V30-GR-lqy">
                         <rect key="frame" x="426" y="20" width="94" height="29"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="29" id="oaa-hH-c0b"/>
-                            <constraint firstAttribute="width" constant="94" id="tdN-u2-hBw"/>
+                            <constraint firstAttribute="width" constant="94" id="fmE-PT-hgY"/>
+                            <constraint firstAttribute="height" constant="29" id="oGy-yW-iWS"/>
                         </constraints>
                         <variation key="widthClass=regular" misplaced="YES">
                             <rect key="frame" x="433" y="15" width="94" height="29"/>
@@ -50,7 +49,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nane" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zv-1m-lho">
                         <rect key="frame" x="66" y="11" width="317" height="47"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="47" id="Bmh-JH-P8u"/>
+                            <constraint firstAttribute="height" constant="47" id="YJ6-Z2-zfs"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -61,19 +60,19 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="19s-80-1dD"/>
-                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="25" id="3hb-gs-GSE"/>
-                    <constraint firstAttribute="bottom" secondItem="V30-GR-lqy" secondAttribute="bottom" constant="20" id="60L-Fn-wup"/>
-                    <constraint firstAttribute="bottom" secondItem="Jsj-ma-TXI" secondAttribute="bottom" constant="25" id="BsN-71-iK5"/>
-                    <constraint firstItem="0zv-1m-lho" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="Ejv-QC-gFP"/>
-                    <constraint firstAttribute="bottom" secondItem="0zv-1m-lho" secondAttribute="bottom" constant="11" id="aLJ-dp-hT6"/>
-                    <constraint firstItem="V30-GR-lqy" firstAttribute="leading" secondItem="Jsj-ma-TXI" secondAttribute="trailing" constant="8" id="d3Y-1G-Qvo"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="NIM-Le-WF3" secondAttribute="bottom" constant="1" id="eQb-aw-yzf"/>
-                    <constraint firstItem="0zv-1m-lho" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="fSM-Wc-trB"/>
-                    <constraint firstItem="NIM-Le-WF3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="ljE-qC-hDr"/>
-                    <constraint firstItem="V30-GR-lqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="omY-NE-f2S"/>
-                    <constraint firstItem="NIM-Le-WF3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="uVc-JH-bGa"/>
-                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="leading" secondItem="0zv-1m-lho" secondAttribute="trailing" constant="8" id="uwz-4A-KBi"/>
+                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="25" id="3q3-Qk-ici"/>
+                    <constraint firstItem="V30-GR-lqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="59D-bD-ZXb"/>
+                    <constraint firstItem="0zv-1m-lho" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="9f9-V7-HAc"/>
+                    <constraint firstItem="0zv-1m-lho" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="Cr5-yf-zkf"/>
+                    <constraint firstAttribute="bottom" secondItem="NIM-Le-WF3" secondAttribute="bottom" constant="9" id="OGa-WB-WFq"/>
+                    <constraint firstItem="V30-GR-lqy" firstAttribute="leading" secondItem="Jsj-ma-TXI" secondAttribute="trailing" constant="8" id="dyD-Hv-FLV"/>
+                    <constraint firstAttribute="bottom" secondItem="V30-GR-lqy" secondAttribute="bottom" constant="20" id="fG1-xM-sl7"/>
+                    <constraint firstAttribute="bottom" secondItem="0zv-1m-lho" secondAttribute="bottom" constant="11" id="fPf-We-Whs"/>
+                    <constraint firstItem="NIM-Le-WF3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hzB-Rj-Pyl"/>
+                    <constraint firstItem="NIM-Le-WF3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kNk-Xf-Y3j"/>
+                    <constraint firstAttribute="bottom" secondItem="Jsj-ma-TXI" secondAttribute="bottom" constant="25" id="kug-ba-DYX"/>
+                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="leading" secondItem="0zv-1m-lho" secondAttribute="trailing" constant="8" id="t9b-IJ-Sf6"/>
+                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="zd2-7Y-Vu7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
