--- a/CityGuide/CityGuide/Classes/BaseTableViewController/BaseTableViewController.xib
+++ b/CityGuide/CityGuide/Classes/BaseTableViewController/BaseTableViewController.xib
@@ -15,34 +15,26 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Nol-rG-tVV">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V29-yS-glK">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V29-yS-glK">
+                    <rect key="frame" x="8" y="8" width="584" height="592"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <color key="separatorColor" red="0.08235294118" green="0.10980392160000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="separatorColor" red="0.94509803920000002" green="0.96078431369999995" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="bUV-eM-RmJ"/>
                         <outlet property="delegate" destination="-1" id="07H-Zu-0kJ"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.94509803921568625" green="0.96078431372549022" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Nol-rG-tVV" secondAttribute="trailing" id="6Me-MX-S60"/>
-                <constraint firstItem="Nol-rG-tVV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EpW-Xd-GdA"/>
                 <constraint firstAttribute="bottom" secondItem="V29-yS-glK" secondAttribute="bottom" id="Fbx-jl-lak"/>
-                <constraint firstAttribute="bottom" secondItem="Nol-rG-tVV" secondAttribute="bottom" id="YYI-jO-yEi"/>
-                <constraint firstAttribute="trailing" secondItem="V29-yS-glK" secondAttribute="trailing" id="gh8-Gn-f2O"/>
-                <constraint firstItem="V29-yS-glK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="hTT-yj-hx9"/>
-                <constraint firstItem="V29-yS-glK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="oGe-aW-pOz"/>
-                <constraint firstItem="Nol-rG-tVV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="rPV-3j-dnH"/>
+                <constraint firstAttribute="trailing" secondItem="V29-yS-glK" secondAttribute="trailing" constant="8" id="gh8-Gn-f2O"/>
+                <constraint firstItem="V29-yS-glK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="hTT-yj-hx9"/>
+                <constraint firstItem="V29-yS-glK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="oGe-aW-pOz"/>
             </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <nil key="simulatedStatusBarMetrics"/>
+            <nil key="simulatedTopBarMetrics"/>
         </view>
     </objects>
-    <resources>
-        <image name="background" width="720" height="1280"/>
-    </resources>
 </document>
